--- a/html/contactez-nous.html
+++ b/html/contactez-nous.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site-Avocat</title>
-    <link rel="stylesheet" href="style\style.css">
-    <script src="script/script.js" defer></script>
+    <link rel="stylesheet" href="../style/contactez.nous.css">
+    <script src="../script/script.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
 </head>
@@ -15,7 +15,7 @@
         <div class="navbar">
             <div class="vide"></div>
             <div class="logo-navbar">
-                <a href="index.html">             
+                <a href="..\index.html">             
                     <img src="C:\Users\W10_I\Desktop\stage\site-avocat\medias\M_avocat-logo.jpg"> 
                 </a> 
             </div>
@@ -32,60 +32,76 @@
                 <div class="content">
                     <div class="title">
                         <ul>
-                            <p>NOUS ALLONS</p>
-                            <p>NOUS BATTRE</p>
-                            <p>POUR VOUS</p>
+                            <li>
+                                <p>NOUS</p>     
+                                <p>CONTACTER</p>              
+                            </li>
                         </ul>               
                     </div>
                     <div class="space-horizontal"></div>                                     
                         <div class="first-paragraph">                       
                             <ul>
                                 <li>
-                                    <p>Faisons le premier pas ensemble et vous</p>
-                                    <p>aidons à résoudre le cas.</p>
-                                    <p>Nous Sommes là à chaque étape du processus.</p>
+                                    <p>Alice MOHERMAN</p>
+                                    <p>Avocat</p>                         
                                 </li>
                             </ul>
-                        </div> 
-                    <div class="A-picture">
-                        <img src="C:\Users\W10_I\Desktop\stage\Prototype-Site\medias\nb-AlineMoehrmann2022_ThomasKuchel-rt-005.jpg">
-                    </div>
-                    <div class="btn-main">
-                        <div class="btn-modif">
-                            <button class="custom-btn btn-5">  Le cabinet</button>    
                         </div>
-                    </div>
-                </div> 
-                <div class="bottombar-main">
-                    <div class="bottombar">
-                        <ul>
-                            <li>
-                                Copyright 2022 M avocat - <u>Mentions légales</u>
-                            </li>
-                        </ul>
-                    </div>
-                </div>                       
-            </div>    
-        </div>
+                        <div class="first-paragraph-half">
+                            <ul>
+                                <li>
+                                    <p>15, Quai Kébler</p>
+                                    <p>67000 Strasbourg</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="second-paragraph">                                                          
+                                 <ul>
+                                    <li>
+                                        <p>03 88 32 37 48</p>
+                                        <p>alinemohermann.avocat@gmail.com</p>
+                                    </li>
+                                 </ul>                                           
+                        </div>
+                        <div class="third-paragraph">
+                            <ul>
+                                <li>                   
+                                    <p>Formulaire</p> 
+                                    <p>de contact :</p>                       
+                                </li>
+                            </ul>
+                        </div>                      
+                </div>    
+            </div>
+            <div class="bottombar-main">
+            <div class="bottombar">
+                <ul>
+                    <li>
+                        <p>Copyright 2022 M avocat</p>
+                        <p><u>Mentions légales</u></p>
+                    </li>
+                </ul>
+            </div>
+        </div>                 
     </main>
         <aside>
             <div class=" btn btn-1">
-                <a href="html/Le_cabinet.html">
+                <a href="Le_cabinet.html">
                     Le cabinet
                 </a>
             </div>
             <div class=" btn btn-2">
-                <a href="html/skills.html">
+                <a href="skills.html">
                     Les compétences
                 </a>
             </div>
             <div class= "btn btn-3">
-                <a href="html/honoraires.html">
+                <a href="honoraires.html">
                 Les honoraires
                 </a>
             </div>
             <div class="btn btn-4">
-                <a href="html/contactez-nous.html">
+                <a href="contactez-nous.html">
                     Nous contacter
                 </a>
             </div>
